# nyafetch

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  wrapper.h
distro_art/: arch  artix  curtainos  debian  endeavouros  linuxlite  unknown
src/: lib.rs  main.rs
src/c/: get_gpu.c  get_gpu.c.gen  get_gpu_gen.c
src/distro_art/: arch  artix  curtainos  debian  endeavouros  gentoo  linuxlite  ubuntu  unknown
