[package]
name = "nyafetch"
version = "1.6.1"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "^0.5.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
chrono = "^0.4.0"

[build-dependencies]
cc = "^1.0.0"
bindgen = "^0.59.0"
